--- a/v2-library/_src/scss/tutor-main.scss
+++ b/v2-library/_src/scss/tutor-main.scss
@@ -21,7 +21,20 @@
 	}
 }
 
+[class*='tutor-screen-'],
 .tutor-course-details-page,
-.tutor-course-single-content-wraper {
+.tutor-course-single-content-wraper,
+.tutor-wrap {
 	@extend .tutor-font-family;
+}
+
+[class*='tutor-screen-'] {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: 'Inter', sans-serif !important;
+	}
 }
