--- a/v2-library/_src/scss/ui-components/_ui-course-listing.scss
+++ b/v2-library/_src/scss/ui-components/_ui-course-listing.scss
@@ -34,18 +34,25 @@
 }
 
 .tutor-course-listing-item {
-	background: var(--tutor-bg-white, #fff);
-	// display: grid;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	background: var(--tutor-bg-white, #fff);
+	border: 1px solid #cdcfd5;
+	border-radius: 7px;
+	// display: grid;
+	// display: flex;
+	// flex-direction: column;
+	// justify-content: space-between;
+
 	a {
 		text-decoration: none;
 		color: inherit;
 	}
+
 	img {
 		max-width: 100%;
 	}
+
 	.list-item-meta {
 		gap: 10px;
 		@include breakpoint-min(desktop-lg) {
@@ -59,6 +66,10 @@
 	.course-listing-thumbnail {
 		height: 250px;
 		width: 100%;
+	}
+
+	.list-item-title > a {
+		@include tutorLineClamp(3);
 	}
 
 	&-head {
@@ -89,21 +100,13 @@
 				color: var(--tutor-design-white, #fff);
 			}
 		}
-
-		.list-item-title > a {
-			display: block !important;
-			display: -webkit-box !important;
-			-webkit-line-clamp: 3;
-			-webkit-box-orient: vertical;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: normal;
-		}
 	}
 
 	&-body {
-		border-left: 1px solid #cdcfd5;
-		border-right: 1px solid #cdcfd5;
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
+
 		.list-item-author {
 			gap: 10px;
 		}
@@ -116,11 +119,12 @@
 	}
 
 	&-footer {
-		border-left: 1px solid #cdcfd5;
-		border-right: 1px solid #cdcfd5;
-		border-bottom: 1px solid #cdcfd5;
-		border-bottom-left-radius: 6px;
-		border-bottom-right-radius: 6px;
+		margin-top: auto;
+		// border-left: 1px solid #cdcfd5;
+		// border-right: 1px solid #cdcfd5;
+		border-top: 1px solid #cdcfd5;
+		// border-bottom-left-radius: 6px;
+		// border-bottom-right-radius: 6px;
 		display: grid;
 		&.has-border {
 			border-top: 1px solid var(--tutor-stroke-light-20, #ccc);
@@ -223,25 +227,28 @@
 		}
 	}
 
-	&,
 	&.tutor-mycourses-card {
 		border: 1px solid #cdcfd5;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+		// display: flex;
+		// flex-direction: column;
+		// justify-content: space-between;
 		border-radius: 6px;
+
 		.tutor-course-listing-thumbnail {
 			height: 160px;
 		}
+
 		.tutor-course-listing-item-head {
 			margin: -1px;
 			// border-radius: unset;
 		}
+
 		.tutor-course-listing-item-body,
 		.tutor-course-listing-item-footer {
 			border-right: none;
 			border-left: none;
 		}
+
 		.tutor-course-listing-item-footer {
 			border-bottom: none;
 		}
